# http_curl_wrapper

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  msvc.yml
code-analyses/all/: cppcheck-all-result.xml  index.html
code-analyses/all/html/: 0.html  1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  stats.html
code-analyses/src-tst/: cppcheck-src-tst-result.xml  index.html
code-analyses/src-tst/html/: stats.html
lib/googletest/googletest/src/: gtest-death-test.cc
src/: CMakeLists.txt  CurlCookies.cpp  CurlCookies.h  CurlException.cpp  CurlException.h  CurlRequest.cpp  CurlRequest.h  CurlResponse.cpp  CurlResponse.h  CurlSession.cpp  CurlSession.h  main.cpp
tst/: CMakeLists.txt  CurlRequestTest.cpp  main.cpp
